# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "interpreter-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
anyhow = "1.0.86"    # error handling
bytes = "1.6.1"      # helps manage buffers
thiserror = "1.0.63" # error handling

clap = { version = "4.5.9", features = ["derive"] }
strum_macros = "0.26.4"
itertools = { version = "0.13.0", default-features = false }

[dev-dependencies]
pretty_assertions = "1.4.0"

[lints.clippy]
pedantic = "deny"
nursery = "deny"
